--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: UNITED MINE WORKERS OF AMERICA LOCAL 8982
-description: Local 8982 is a labor organization for Concord PrePlant
+description: Local 8982 is a labor organization for Concord PrepPlant
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-architect
