--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: UNITED MINE WORKERS OF AMERICA LOCAL 8982
 description: Local 8982 is a labor organization for Concord PrepPlant
-show_downloads: true
+show_downloads: false
 google_analytics:
 theme: jekyll-theme-architect
